Did frontend changes-Add spin-once animation for PFP refresh,Add camera option to upload pic,Added img tag of pfp

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,2 +1,14 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+@keyframes spinOnce {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+.spin-once {
+  animation: spinOnce 0.5s ease-in-out;
+}
